# ray-tracer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  INTERACTIVE_GUIDE.md  LLM_CONTEXT.md  Makefile  Makefile.backup  Makefile.bak  PHASE35_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  README.md  SHOWCASE_QUICK_REFERENCE.md  benchmark.sh  benchmark_advanced_features.sh  benchmark_feature_deltas.sh  benchmark_features.sh  benchmark_log.txt  benchmark_phase3.sh  benchmark_results.txt  benchmark_simd.sh  benchmark_simd_wavefront.sh  capture_comparisons.sh  claude-raytracer-ascii.md  claude-raytracer-cpu.md  claude-raytracer-gpu.md  claude-raytracer-simd-debug.md  demo_ascii_controls.sh  raytracer_ascii  raytracer_interactive  raytracer_interactive_cpu  raytracer_interactive_gpu  render.yaml  showcase_scene.sh  test_ascii.sh  test_gpu_features.sh  test_renderer  test_renderer.cpp  test_simd.cpp
benchmark_results/: README.md
config/: camera_hot_reload.txt.example
docs/: ASCII_INTERACTIVE.md  ASCII_RENDERER.md  GPU_COMPARISON_GUIDE.md  GPU_GETTING_STARTED.md  GPU_IMPLEMENTATION_COMPLETE.md  GPU_IMPLEMENTATION_PLAN.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_IMPROVEMENT_ROADMAP.md  GPU_LIGHTING_IMPROVEMENT_PLAN.md  GPU_PHASE1_SUMMARY.md  GPU_PHASE35_ADVANCED_REFLECTIONS.md  GPU_PHASE3_GI.md  GPU_PHASE4_POST_PROCESSING.md  GPU_QUICK_REFERENCE.md  GPU_RENDERER.md  GPU_RENDERER_GUIDE.md  GPU_SHOWCASE_GUIDE.md  GPU_TOGGLEABLE_FEATURES.md  PBR_TESTING_GUIDE.md  SESSION_SUMMARY.md  benchmarking.md  build.html  community.html  cpu-optimization-experiments.md  features.html  (+20 more)
(+96 files in other folders)
